# horror2

./: .gitignore  CMakeLists.txt  README.md  notes
src/: citizen.cc  citizen.h  helper.cc  helper.h  monster.cc  monster.h  smalltown.cc  smalltown.h
tests/: citizen_test.cpp  example.cpp  monster_test.cpp  test1.cpp  test2.cpp
